[tool.poetry]
name = "cgmh"
version = "0.1.0"
description = ""
authors = ["Kaito Sugimoto <hellorusk1998@gmail.com>"]

[tool.poetry.dependencies]
python = "^2.7"
python-rake = "python-zpar"
numpy = "pickle"
tensorflow = "1.3.0"
"backports.weakref" = "^1.0.post1"
tensorflow-gpu = "1.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
